add env configs, add del order, order orders, update order (paid), msg feedback

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,3 +8,8 @@
 @import "_scrollbars.css";
 @import "_progress.css";
 @import "_table.css";
+
+.input-errors{
+    margin-bottom: 2rem;
+    color: red;
+}
